# espamAI

./: .gitignore  README.md  configure  configure.in  makefile  manifestgenerator.py  pom.xml
config/: cpinvoke.in  vars.mk.in
espamAIjar/lib/darts/darts/: ACSDFModel.py  ActorModel.py  Allocation.py  ChannelModel.py  EDF.py  EspamHandler.py  PlatformGenerator.py  PlatformParameters.py  Processor.py  Tarjan.py
espamAIjar/lib/darts/docs/: Allocation.rst  CSDFParser.rst  ChannelModel.rst  DotHandler.rst  Makefile  PlatformParameters.rst  Processor.rst  SchedulabilityAnalysis.rst  Schedulers.rst  gph.bnf  introduction.rst  usage.rst
espamAIjar/lib/darts/tests/: Test_QPA.py
lib/: libpandapolylib.so.32  libpandapolylib.so.64
lib/DNN_func_libs/CPU_lib/: appFunc.cpp  dnnFunc.cpp  dnnFunc.h
lib/DNN_func_libs/CPU_lib_DN/: dnnFunc.cpp  dnnFunc.h
lib/DNN_func_libs/CPU_lib_old_GEMM/: appFunc.cpp  appFunc.h  dnnFunc.cpp  dnnFunc.h
lib/DNN_func_libs/GPU_lib/: dnnFunc.cpp  dnnFunc.h  kernel.cu
lib/DNN_func_libs/NA_lib/: avgpool.cpp  avgpool.h  dnnFunc.cpp  dnnFunc.h  leaky.cpp  leaky.h  maxpool.cpp  maxpool.h  paramIO.cpp  paramIO.h  soc_drivers.c  soc_drivers.h  spatconv.c  spatconv.h  spatconv_hw.cpp  spatconv_hw.h  types2.cpp  types2.h
lib/darts/: .gitignore  LICENSE.md  README.md
lib/darts/cython/: Makefile  run.py  setup.py
lib/darts/darts/: CProcessor.py  CSDFParser.py  DotHandler.py  FPPS.py  JSONHandler.py  Makefile  Phrt.py  Plot.py  Schedulers.py  TextHandler.py  Utilities.py  espam_cnn_interface.py  phrt_ngsa2_deap.py
lib/darts/docs/: ACSDFModel.rst  ActorModel.rst  CProcessor.rst  EspamHandler.rst  PlatformGenerator.rst  TextHandler.rst  Utilities.rst  conf.py  index.rst  pipeline_example.gph
lib/darts/tests/: Benchmark.py  Test_QPA2.py  Test_RTA.py  Test_unfolding.py
lib/darts/tests/synthetic/: chain.c  chain.h  chain121.gph  fm.gph  fm.h
lib/onnx_weights_extractor/: numpy_example.py  onnx_weights_extractor.py  onnxtst.py
src/: default_functions.mk  javaclasses.mk  makefile
src/espam/: makefile
src/espam/datamodel/: EspamException.java  LinearizationType.java  makefile
src/espam/datamodel/domain/: ControlExpression.java  FilterSet.java  IndexVector.java  LBS.java  Polytope.java  makefile
src/espam/datamodel/graph/: Edge.java  Graph.java  NPort.java  Node.java  makefile
src/espam/datamodel/implementationdata/: Implementation.java  ImplementationTable.java  makefile
src/espam/datamodel/mapping/: Accelerator.java  MFifo.java  MProcess.java  MProcessor.java  Mapping.java  makefile
src/espam/datamodel/parsetree/: ParserNode.java  ParserNodeImp.java  makefile
src/espam/datamodel/platform/: Link.java  Platform.java  Port.java  Resource.java  makefile
src/espam/datamodel/pn/: Channel.java  Gate.java  Process.java  ProcessNetwork.java  makefile
src/espam/docs/: ADG_UML.vsd  CDPN_UML.vsd  ESPAM.vsd  Mapping_UML.vsd  MemoryMapExample.vsd  crossbar.vsd  mapping.xml  platform.xml  platformUML.vsd  platform_elaborate.xml
src/espam/docs/espamAI/: .~lock.espamAIMan.odt#  CNN_supported_operators_v2.odt  CNN_supported_operators_v3.odt  EspamAISesameMan.odt  espamAIMan.odt  pthreadMan.odt
src/espam/docs/formerIssues/: README  counter3.c  counter3.kpn  equalities.c  equalities.kpn  reuse.c  reuse.kpn
src/espam/examples/CSDFTimeSpec/: wcet.json
src/espam/examples/M_JPEG/: M_JPEG.dot  M_JPEG.kpn  M_JPEG.m  README  impldata.xml
src/espam/examples/energy_spec/: wcenergy.json  wcenergy2.json
src/espam/examples/mapping/: mapping_alexnet.xml  mapping_googlenet (gpu).xml  mapping_googlenet.xml  mapping_inception_v1.xml  mapping_mnist.xml  mapping_template.xml  mapping_vgg19.xml  platform.xml
src/espam/examples/platform/: Jetson.json  Jetson.xml  NEURAghe.json  neuraghe_jetson.tar.xz
src/espam/examples/time_spec/: default_wcet.json  wcet_example.json
src/espam/interfaces/: makefile
src/espam/interfaces/python/: Espam2DARTS.java  ONNXWeightsExtractor.java  espam_cnn_interface.py  espam_cnn_interface.py.in  makefile  onnx_weights_extractor.py  onnx_weights_extractor_CNTKGraph.rar  pythonListener.java
src/espam/libHDPC/hdpc/: core_stuff.hpp  debug.hpp  process.hpp  stdafx.h  timer.h  timer.hpp
src/espam/libSDK/: P_1.ld  P_2.ld
src/espam/libSDK/BSPTemplate/: BSP_Template_MakeFile  BSP_Template_Project  BSP_Template_Project_ZedBoard  Linker_Script_Template  XCP_AXI_FreeRTOS_Template_CProject  XCP_AXI_HostIF_Template_CProject  XCP_AXI_Standalone_Template_CProject  XCP_FreeRTOS_Template_CProject  XCP_HostIF_Template_CProject  XCP_Host_IF_Makefile  XCP_Host_IF_Template_Subdir  XCP_PLB_HostIF_Template_CProject  XCP_PLB_Standalone_Template_CProject  XCP_Standalone_Template_CProject  XCP_Template_CProject  XCP_Template_FProject  XCP_Template_Makefile  XCP_Template_Project  XCP_Xilkernel_Template_CProject  cproject  project  sources.mk  zedBoardProcessor.cproject  zedBoardProcessor.project  zedBoardmakefile  zedBoardsubdir.mk
src/espam/libSystemC/: fifo_fsl.h  pnMonitor.h
src/espam/libXPS/: linker_script.py  xilinx.sh
src/espam/main/: Config.java  Config.java.in  Copyright.java  ExtensionFilter.java  Main.java  Options.java  UserInterface.java  makefile
src/espam/operations/: ADGraphToPN.java  CDPNToParseTrees.java  ConsistencyCheck.java  SynthesizeCDPN.java  SynthesizePlatform.java  makefile
src/espam/parser/: makefile
src/espam/utils/: makefile
src/espam/visitor/: ADGraphVisitor.java  CDPNVisitor.java  CNNGraphVisitor.java  CSDFGraphVisitor.java  ExpressionVisitor.java  GraphVisitor.java  MappingVisitor.java  PNVisitor.java  PlatformVisitor.java  StatementVisitor.java  Visitor.java  makefile
src_lib/: README.md  configure  configure.in  default_functions.mk  makefile  vars.mk.in
src_lib/onnx/: makefile
src_lib/onnx/com/: makefile  vars.mk
src_lib/onnx/com/onnx/: ONNX.java  makefile  onnx.in.proto  onnxTest.java
src_lib/polylib/: makefile
src_lib/polylib/polylibBIT/: PolyLibBIT.java  PolylibBITImplementation.java  espam_utils_polylib_polylibBIT_PolyLibBIT.h  makefile  polylibBIT.c  polylibBIT.h
(+875 files in other folders)
